--- a/Projeto_03_WebMaster/index.html
+++ b/Projeto_03_WebMaster/index.html
@@ -21,7 +21,7 @@
 					<li><a href="">serviços</a></li>
 					<li><a href="">sobre</a></li>
 					<li><a href="">sontato</a></li>
-				</ul>
+				</ul><!--desktop-menu-->
 			</nav>
 
 			<nav class="mobile-menu">
@@ -31,9 +31,7 @@
 					<li><a href="">sobre</a></li>
 					<li><a href="">sontato</a></li>
 				</ul>
-			</nav>
-
-
+			</nav><!--mobile-menu-->
 
 			<div class="clear"></div>
 		</div><!--container-->		
@@ -42,7 +40,7 @@
 			<h2>Sistemas Próprios</br>
 			Para Empresas Autênticas</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>	
+		</div><!--chamada1-->
 
 	</header>
 
@@ -58,21 +56,21 @@
 				</ul>
 				<div class="clear"></div>
 				<div class="btn1-texto">Entre em contato</div>
-			</div>
+			</div><!--texto-sessao1-->
 			
 			<div class="device-sessao1"></div>
 			<div class="clear"></div>
 			
-		</div>
-	</section>
+		</div><!--container-->
+	</section><!--sessao1-->
 
 	<section class="sessao2">
 		<div class="container">
 			<h2>Desenvolvido de pessoas para pessoas</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor ididunt ut labore et dolore magna aliqua. Ut enim ad im veniam,quis nostrud exercitation ullamco aboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse	cillum dolore eu fugiat nulla atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia eserunt mollit anim id est laborum.</p>
 			<img src="imagens/mockup.jpg">
-		</div>
-	</section>
+		</div><!--container-->
+	</section><!--sessao2-->
 
 	<section class="sessao3">		
 			<div class="part1">
@@ -90,19 +88,19 @@
 						<p>Co-Founder / Desenvolvedor</p>
 					</div>
 					<div class="img-autor"></div>
-				</div>
+				</div><!--titulo-autor-->
 				<div class="texto-autor">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor ididunt ut labore et dolore magna aliqua.</p>
-				</div>
-			</div>
+				</div><!--texto-autor-->
+			</div><!--sobre-autor-->
 			<div class="slider-bullets">
 				<span style="background-color: rgb(170,170,170);"></span>
 				<span></span>
 				<span></span>
-			</div>
-		</div>
+			</div><!--slider-bullets-->
+		</div><!--part2-->
 		<div class="clear"></div>
-	</section>
+	</section><!--sessao3-->
 
 	<section class=sessao4>
 		<div class="container">
@@ -124,20 +122,20 @@
 				<div class="map-wraper3">
 					<div class="map-wraper2">
 						<iframe class="map" src="https://maps.google.com/maps?q=parque%20bela%20vista&t=&z=15&ie=UTF8&iwloc=&output=embed" ></iframe>
-					</div>
-				</div>
-			</div>			
+					</div><!--map-wraper2-->
+				</div><!--map-wraper3-->
+			</div><!--map-wraper-->			
 
 			<div class="clear"></div>
-		</div>
-	</section>
+		</div><!--container-->
+	</section><!--sessao4-->
 
 	<footer>
 		<div class="container">
 			<p>Todos os direitos reservados</p>
 			<p>teste@hotmail.com</p>
 			<div class="clear"></div>
-		</div>
+		</div><!--container-->
 	</footer>
 
 </body>
