--- a/Projeto_04_WebMaster/index.html
+++ b/Projeto_04_WebMaster/index.html
@@ -1,108 +1,270 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Projeto 01</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<meta nome="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
-		<meta charset="utf-8">
-	</head>
-	<body>
+<html lang="pt-br">
+<head>
+	<title>Projeto 04</title>	
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<meta name="description" content="palavras,separadas,por,virgulas">
+	<meta name="keywords">
+	<meta name="author" content="Rafael Sena">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
+</head>
+<body>
+	<header>
+		<div class="container">
+			<div class="logo">
+				<img src="imagens/logo.png">
+			</div><!--logo-->
 
-		<div class="header">
-			<div class="center">
-				<img src="images/logo.png">
-			</div><!--center-->			
-		</div><!--header-->
+			<nav class="menu-desktop">
+				<ul>
+					<li><a href="">quem sou</a></li>
+					<li><a href="">depoimentos</a></li>
+					<li><a href="">sobre</a></li>
+					<li><a href="">contato</a></li>
+				</ul>
+			</nav>
 
-		<div class="container-banner">
-			<div class="center">
-				<div>
-					<div class="container-list">
-						<ul>
-							<li> Lorem ipsum dolor sit amet</li>
-							<li> Lorem ipsum dolor sit amet</li>
-							<li> Lorem ipsum dolor sit amet</li>
-							<li> Lorem ipsum dolor sit amet</li>
-						</ul>
-					</div><!--container-list-->
-				</div>
-				<div>
-					<div class="form">
-						<h2>Preencha o formulário e inicie a sua caminhada para virar um webmaster!</h2>
-						<form>
-							<div class="input-container">
-								<span>Nome*</span>
-								<input type="text" name="nome" required>
-							</div><!--input-container-->
-								<div class="input-container">
-								<span>E-mail*</span>
-								<input type="text" name="email" required>
-							</div><!--input-container-->
-								<div class="input-container">
-								<span>Telefone*</span>
-								<input type="text" name="telefone" required>
-							</div><!--input-container-->
-							<p class="warning">Campos obrigatórios*</p>
-							<div class="input-submit-container">
-								<input type="submit" name="acao" value="Enviar!">
-							</div><!--input-submit-container-->
-						</form>			
-					</div><!--form-->
-				</div>
-				<div class="clear"></div>
-			</div><!--center-->			
-		</div><!--container-banner-->
+			<nav class="menu-mobile">
+				<ul>
+					<li><a href="">quem sou</a></li>
+					<li><a href="">depoimentos</a></li>
+					<li><a href="">sobre</a></li>
+					<li><a href="">contato</a></li>
+				</ul>
+			</nav>
+			<div class="clear"></div>
+		</div><!--container-->
+	</header>
 
-		<div class="container-2">
-			<div class="center">
+	<section class="mosaico">
+		<div class="container">
+			<div class="mosaico-wraper">
+				<div class="mosaico-single">
+					<div class="img-mosaico-single"></div>
+					<div class="img-mosaico-single"></div>
+				</div><!--mosaico-single-->
+
+				<div class="mosaico-single">
+					<div class="img-mosaico-single"></div>
+					<div class="img-mosaico-single"></div>
+				</div><!--mosaico-single-->
+				<div class="mosaico-single">
+					<div class="img-mosaico-single"></div>
+					<div class="img-mosaico-single"></div>
+				</div><!--mosaico-single-->
+				<div class="mosaico-single">
+					<div class="img-mosaico-single"></div>
+					<div class="img-mosaico-single"></div>
+				</div><!--mosaico-single-->
+				<div class="mosaico-single">
+					<div class="img-mosaico-single"></div>
+					<div class="img-mosaico-single"></div>
+				</div><!--mosaico-single-->
+				<div class="mosaico-single">
+					<div class="img-mosaico-single"></div>
+					<div class="img-mosaico-single"></div>
+				</div><!--mosaico-single-->
+			</div><!--mosaico-wraper-->
+		</div><!--container-->
+	</section><!--mosaico-->
+
+	<section class="servicos">
+		<div class="container">
+			<div class="box-servico">
 				<h2>Lorem Ipsum</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div><!--center-->
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+			</div>
 
-			<div class="arrow"></div>
-		</div><!--container-2-->
+			<div class="box-servico">
+				<h2>Lorem Ipsum</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+			</div>
 
-		<div class="section-1">
-			<div class="center"> 
-				<h2>Aprenda com quem está no mercado</h2>
-				<div class="container-section">
-					<div class="container-single">
-						<div><img src="images/icon.png" /></div>
-						<div class="text-container-single">
-							<h2>Lorem ipsum</h2>
-							<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div><!--text-container-single-->
-					</div><!--container-single-->
-					<div class="container-single">
-						<div><img src="images/icon.png" /></div>
-						<div class="text-container-single">
-							<h2>Lorem ipsum</h2>
-							<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div><!--text-container-single-->
-					</div><!--container-single-->
-					<div class="container-single">
-						<div><img src="images/icon.png" /></div>
-						<div class="text-container-single">
-							<h2>Lorem ipsum</h2>
-							<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div><!--text-container-single-->
-					</div><!--container-single-->
-				</div><!--container-section-->
-				<!--o clear é a aplicado após o ultimo elemento flutuante-->
-				<div class="clear"></div>
-			</div><!--center-->
-		</div><!--section-1-->
-		<div class="footer">
-			<p>Todos os direitos reservados</p>
-			<p>Rua. abdair macedo, numero 1021 - Salvador - BA</p>
-		</div><!--footer-->
-	</body>
+			<div class="box-servico">
+				<h2>Lorem Ipsum</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+			</div>
+		</div>		
+	</section>
+
+	<section class="perfil-container">
+		<div class="container">
+			<div class="perfil-wraper">
+				<div class="perfil-wraper2">
+					<div class="img-perfil"></div><!--img-perfil-->
+					<div class="texto-perfil">
+						<h2>TÍTULO DO PROFISSIONAL</h2>
+						<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br> Duis aute irure dolor in reprehenderit in voluptate velit esse	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div><!--texto-perfil-->			
+				</div><!--perfil-wraper2-->
+			</div><!--perfil-wraper-->
+		</div><!--container-->
+	</section><!--perfil-container-->
+
+	<section class="videos">
+		<div class="container">
+			<div class="box-video">
+				<!--pra inserir o vídeo em cima do video do youtube, clikar com o botão direito e copiar código de incorporação-->
+				<iframe src="https://www.youtube.com/embed/UhuoLV2u3u8" frameborder="0" allowfullscreen></iframe>
+			</div><!--box-video-->
+
+			<div class="box-video">
+				<iframe src="https://www.youtube.com/embed/UhuoLV2u3u8" frameborder="0" allowfullscreen></iframe>
+			</div><!--box-video-->
+
+			<div class="box-video">
+					<iframe src="https://www.youtube.com/embed/UhuoLV2u3u8" frameborder="0" allowfullscreen></iframe>
+			</div><!--box-video-->
+			<div class="clear"></div>
+		</div><!--container-->
+	</section><!--videos-->
+
+	<section class="tratamentos">
+		<h2>Tratamentos</h2>
+		<div class="container">
+			<div class="tratamento-container">
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+			</div><!--tratamento-container-->
+
+			<div class="tratamento-container">
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+			</div><!--tratamento-container-->
+
+			<div class="tratamento-container">
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+
+				<div class="tratamento-single">
+					<h2>Profilaxia e prevenção</h2>
+					<p>Mantenha um sorrizo sem doença periodontal, livre de cálculo, cárie e outras doenças que podem ser controladas e evitadas com a ida controlada ao dentista.</p>
+				</div><!--tratamento-single-->
+			</div><!--tratamento-container-->
+			<div class="clear"></div>
+		</div><!--container-->
+	</section><!--tratamentos-->
+
+	<section class="depoimentos">
+		<h2>Depoimentos</h2>
+		<section class="container">
+			<div class="depoimento-single">
+				<!--tag quote é usado em depoimentos-->
+				<quote>
+					"Estrutura e atendimentos excepcionais! adorei o atendimento da Dra. Fernanda, excelente profissional"
+				</quote>
+				<div class="nome-depoimento">
+					<img src="imagens/depoimento1.png" />
+					<span>Maria Augusta Santos</span>
+				</div><!--nome-depoimento-->
+			</div><!--depoimento-single-->
+		</section><!--container-->
+	</section><!--depoimentos-->
+
+	<section class="social">
+			<section class="instagram-chamada">
+				<a target="_blank" href="http://instagram.com"><img src="imagens/inst.png"></a>
+				<p>Acesse o Instagram para ver mais fotos<br/>
+				@dr.fernanda_teste</p>
+			</section><!--instagram-chamada-->
+		
+
+		<div class="mosaico-social">
+			<div style="background-image: url('imagens/img3.jpg');" class="img-mosaico-single-social">1</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">2</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">3</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">4</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">5</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">6</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">7</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">8</div><!--img-mosaico-single-social-->
+			<div class="img-mosaico-single-social">9</div><!--img-mosaico-single-social-->
+		</div><!--mosaico-social-->
+
+		<div class="facebook-chamada">
+			<a target="_blank" href="http://facebook.com"><img src="imagens/fb.png"></a>
+			<p>Acesse o Instagram para ver mais fotos<br> @dr.fernanda_teste</p>
+		</div><!--facebook-chamada-->
+		<div class="clear"></div>
+	</section><!--social-->
+
+	<section class="contato">
+		<h2>Contato</h2>
+		<form>
+			<div class="form-wraper w100">
+				<span>Nome:</span>
+				<input type="text" name="nome">
+			</div><!--form-wraper-->
+			<div class="form-wraper w50">
+				<span>E-mail:</span>
+				<input type="text" name="email">
+			</div><!--form-wraper-->
+			<div class="form-wraper w50">
+				<span>Telefone:</span>
+				<input type="text" name="telefone">
+			</div><!--form-wraper-->
+			<div class="form-wraper w100">
+				<span>Mensagem</span>
+				<textarea></textarea>
+			</div><!--form-wraper-->
+			<div style="text-align: center;" class="form-wraper w100">
+				 <input type="submit" name="acao" value="Enviar">
+			</div><!--form-wraper-->
+			<div class="clear"></div>
+		</form>
+	</section><!--contato-->
+
+	<footer>
+		<div class="container">
+			<div class="footer-block">
+				<h2>Telefone</h2>
+				<p>(48)9999-999<br>(48)9999-999</p>
+			</div><!--footer-block-->
+			<div class="footer-block">
+				<h2>Horários</h2>
+				<p>Segunda a sexta<br>08:00 até 12:00</p>
+			</div><!--footer-block-->
+			<div class="footer-block">
+				<h2>Endereço</h2>
+				<p> Avenida Guimarães neto, 2487, edifício Mario, 406 <br>Centro, Salvador - BA, 99999-000</p>
+			</div><!--footer-block-->
+			<div class="clear"></div>
+		</div><!--container-->
+	</footer>
+
+
+</body>
 </html>
