Quarta Landing Page

--- a/Projeto_04_WebMaster/index.html
+++ b/Projeto_04_WebMaster/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="imagens/logo.png">
+				<div class="img" style="background: #ccc; color: white">Logo</div>
 			</div><!--logo-->
 
 			<nav class="menu-desktop">
@@ -216,7 +216,7 @@
 
 		<div class="facebook-chamada">
 			<a target="_blank" href="http://facebook.com"><img src="imagens/fb.png"></a>
-			<p>Acesse o Instagram para ver mais fotos<br> @dr.fernanda_teste</p>
+			<p>Acesse o Instagram para ver mais fotos<br> @dr.cassandra_teste</p>
 		</div><!--facebook-chamada-->
 		<div class="clear"></div>
 	</section><!--social-->
