--- a/Projeto_03_WebMaster/index.html
+++ b/Projeto_03_WebMaster/index.html
@@ -55,7 +55,7 @@
 					<li>Sistemas</li>
 				</ul>
 				<div class="clear"></div>
-				<div class="btn1-texto">Entre em contato</div>
+				<div class="btn1-texto">Entre em contato</div><!--btn1-texto-->
 			</div><!--texto-sessao1-->
 			
 			<div class="device-sessao1"></div>
