Segunda Landing Page

--- a/Projeto_02_WebMaster/index.html
+++ b/Projeto_02_WebMaster/index.html
@@ -108,7 +108,7 @@
 
 		<footer>
 			<div class="container">
-				<a href="www.google.com"></a><img style="background-color: gray">
+				<a href="www.google.com"></a><img style="background-color: transparent;">
 				<p>Todos os direitos reservados</p>
 				<p>Contato (xx)xxx-xxxx</p>
 			</div>
