--- a/Projeto 05/index.html
+++ b/Projeto 05/index.html
@@ -22,7 +22,7 @@
 			<li><a style="color:#EB2D2D;" href="index.html">Home</a></li>
 			<li><a href="venda.html">Venda</a></li>
 			<li><a href="sobre.html">Sobre</a></li>
-			<li><a href="">Contato</a></li>
+			<li><a goto="contato" href="">Contato</a></li>
 		</ul>
 	</nav><!--desktop-->
 
@@ -31,7 +31,7 @@
 			<li><a style="color:#EB2D2D;" href="index.html">Home</a></li>
 			<li><a href="venda.html">Venda</a></li>
 			<li><a href="sobre.html">Sobre</a></li>
-			<li><a href="">Contato</a></li>
+			<li><a goto="contato" href="">Contato</a></li>
 		</ul>
 	</nav><!--mobile-->
 
@@ -96,7 +96,7 @@
 			<li>Consultoria de veículos</li>
 			<li>Indicação de Mecânicos e peças</li>
 		</ul>
-		<a class="btn1" href="">Saiba mais</a>
+		<a class="btn1" href="sobre.html">Saiba mais</a>
 		</div>
 	</div><!--half-1-->
 
@@ -106,10 +106,13 @@
 		<div class="depoimento-single">
 			<p>“O Rafael foi muito atencioso, me buscou no aeroporto
 			e garantiu toda comodidade e conforto no almoço, no transfer, na visita ao veículo e durante o test-drive”</p>
+			<p>“O Rafael foi muito atencioso, me buscou no aeroporto
+			e garantiu toda comodidade e conforto no almoço, no transfer, na visita ao veículo e durante o test-drive”</p>
+			<p>“Outro depoimento”</p>
 			<div class="navigation">
 				<div class="arrows">
-					<img src="imagens/arrow-left.png" />
-					<img src="imagens/arrow-right.png" />
+					<img prev src="imagens/arrow-left.png" />
+					<img next src="imagens/arrow-right.png" />
 				</div><!--arrows-->
 				<div class="nome-depoimento">João da silva</div>
 			</div><!--navigation-->
@@ -118,7 +121,7 @@
 
 </section><!--servicos-descricao-->
 
-<section class="contato">
+<section id="contato" class="contato">
 	<div class="line-titulo">
 		<div class="ln1"></div>
 		<h2>Contato</h2>
@@ -165,6 +168,7 @@
 	<div class="clear"></div>
 	</div><!--container-->
 </footer>
-
+<script src="js/jquery.js"></script>
+<script src="js/functions.js"></script>
 </body>
 </html>
