--- a/Projeto 05/veiculo-teste.html
+++ b/Projeto 05/veiculo-teste.html
@@ -52,17 +52,17 @@
 	<div class="container">
 
 	<div class="info-veiculo">
-		<div class="info-bread"><a href="">HOME</a><span>></span>
-		<a href="">VENDA</a><span>></span>
+		<div class="info-bread"><a href="index.html">HOME</a><span>></span>
+		<a href="venda.html">VENDA</a><span>></span>
 		<a href="">VEÍCULO DE TESTE</a></div>
-		<div style="background-image:url('imagens/carro1.jpg');" class="foto-destaque"></div>
+		<div class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
 		<div class="arrow-left-nav"></div>
 		<div class="arrow-right-nav"></div>
 		<div class="nav-galeria">
 			<div class="nav-galeria-wraper">
-				<div style="background-color:rgb(210,210,210);" class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
 				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro2.jpg');" class="mini-img"></div></div>
 				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
 				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
 				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
@@ -170,6 +170,7 @@
 	<div class="clear"></div>
 	</div><!--container-->
 </footer>
-
+<script src="js/jquery.js"></script>
+<script src="js/functions.js"></script>
 </body>
 </html>
