--- a/Projeto 05/venda.html
+++ b/Projeto 05/venda.html
@@ -55,7 +55,7 @@
 						<div class="pointer-barra"></div>
 					</div><!--barra-preco-->
 					<div class="valor-pesquisa">
-						<p>R$0,00</p>
+						<p class="preco_pesquisa">R$0,00</p>					
 						<p>R$70.000,00</p>
 						<div class="clear"></div>
 					</div><!--valor-pesquisa-->
@@ -109,7 +109,7 @@
 		<div class="info-carro">
 			<h2>Volkswagen Karmann-ghia</h2>
 			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<a class="btn1" href="veiculo-teste.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 
@@ -183,6 +183,7 @@
 	<div class="clear"></div>
 	</div><!--container-->
 </footer>
-
+<script src="js/jquery.js"></script>
+<script src="js/functions.js"></script>
 </body>
 </html>
